crates/rome_js_formatter/tests/specs/prettier/typescript/class/constructor.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "typescript\\class\\constructor.ts"
---

# Input

```js
class foo {
  constructor(static a: number) {}
}

class foo {
  constructor(export a: number) {}
}

class A {
    'constructor': typeof A
    static Foo() {
        return new A()
    }
}

class B {
  constructor<>() {}
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -7,7 +7,7 @@
 }
 
 class A {
-  "constructor": typeof A;
+  'constructor': typeof A
   static Foo() {
     return new A();
   }
```

# Output

```js
class foo {
  constructor(static a: number) {}
}

class foo {
  constructor(export a: number) {}
}

class A {
  'constructor': typeof A
  static Foo() {
    return new A();
  }
}

class B {
  constructor<>() {}
}
```


# Errors
```
constructor.ts:2:15 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × 'static' cannot appear on a parameter.
  
    ┌─ constructor.ts:2:15
    │
  2 │   constructor(static a: number) {}
    │               ^^^^^^
  
constructor.ts:6:15 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a parameter but instead found 'export'
  
  × Expected a parameter here
  
    ┌─ constructor.ts:6:15
    │
  6 │   constructor(export a: number) {}
    │               ^^^^^^
  
constructor.ts:6:22 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `,` but instead found `a`
  
  × unexpected
  
    ┌─ constructor.ts:6:22
    │
  6 │   constructor(export a: number) {}
    │                      ^
  
constructor.ts:10:5 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × class properties may not be called `constructor`
  
     ┌─ constructor.ts:10:5
     │
  10 │     'constructor': typeof A
     │     ^^^^^^^^^^^^^^^^^^^^^^^
  
constructor.ts:17:15 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
     ┌─ constructor.ts:17:15
     │
  17 │   constructor<>() {}
     │               ^
  
constructor.ts:17:14 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × constructors cannot have type parameters.
  
     ┌─ constructor.ts:17:14
     │
  17 │   constructor<>() {}
     │              ^^
  

```


